
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labmesh"
version = "0.1.0"
description = "Hybrid ZeroMQ: directory broker + direct RPC + XPUB/XSUB events + DataBank for bulk data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="You", email="you@example.com"}]
dependencies = ["pyzmq>=25"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Framework :: AsyncIO"
]

[project.urls]
Homepage = "https://example.com/labmesh"
