
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labmesh"
version = "0.0.0.dev0"
description = "Hybrid ZeroMQ networking package for connecting lab instruments."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Grant Giesbrecht", email="giesbrechtgrant@gmail.com"}]
dependencies = ["pyzmq>=25"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Framework :: AsyncIO"
]
license = "BSD-2-Clause"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Grant-Giesbrecht/labmesh"
Issues = "https://github.com/Grant-Giesbrecht/labmesh/issues"

[project.scripts]
lm-keygen = "labmesh.security:main"

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-asyncio>=0.23", "pytest-timeout>=2.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 30
timeout_method = "thread"
